# py-OCamCalib

./: README.md  pyproject.toml  requirements.txt
docs/calibration-guide/: README.md
src/pyocamcalib/core/: _utils.py  extrinsic.py  linear_estimation.py
src/pyocamcalib/modelling/: calibration.py  utils.py
src/pyocamcalib/script/: calibration_script.py
