[project]
name = "py-ocamcalib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2",
    "cycler>=0.12.1",
    "fonttools>=4.62.1",
    "kiwisolver>=1.5.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "packaging>=26.1",
    "pillow>=12.2.0",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.17.1",
    "setuptools>=82.0.1",
    "six>=1.17.0",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
